Linux version for MAD,Executoin implemented